[package]
name = "buri"
authors = ["Erik Wällstedt"]
description = "A game engine"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gkhk0/buri"
readme = "README.md"
license = "MIT"
keywords = ["game", "engine", "gamedev", "graphics"]
categories = [
  "game-development",
  "game-engines",
  "graphics",
  "gui",
  "rendering",
]

[dependencies]
